Closed Bug 1173678 Opened 9 years ago Closed 9 years ago

[e10s] ContentCache::GetUnionTextRect() should ignore some text rects which are not cached

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
e10s + ---
firefox41 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

(Blocks 1 open bug)

Details

(Keywords: inputmethod)

Attachments

(1 file)

When composition string becomes longer, IME may try to query text rect of whole composition string but it may fail because child process may not feedback the new layout information to TabParent.

So, we should ignore unknown text rects when computing union rect. In most cases, including the first text rect is important.
Attachment #8622376 - Flags: review?(m_kato) → review+
https://hg.mozilla.org/mozilla-central/rev/12afd3e6ae24
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: