Bug 1173678 ContentCache should return union rect even if some character rects are not cached but the first character of the range is cached r=m_kato